Add @ConditionalOnProperty on Service and ResourceController for OIL